[package]
name = "zerucontent"
version = "0.1.0"
authors = ["Ansho Rei <anshorei@zeroid.bit>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zeronet_cryptography = { path = "../zeronet_cryptography" }
json_filter_sorted = { git = "https://github.com/decentnetwork/sorted_json_keys.git" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.73"
serde_bytes = "0.11.5"
serde_derive = "1.0.132"
